_scss/_media.scss
@media (max-width: 600px) {
  .nav {
    padding-left: 0 !important;
    padding-right: 0 !important;
    margin: 12px 0 20px 0 !important;
    .logo {
      margin-bottom: 12px;
      .nav-logo {
        padding-left: 10px !important;
      }
    }
    ul {
      float: left !important;
      clear: left;
      width: 100%;
      border-top: 1px solid #eaeaea;
      background: #fafafa;
      padding-left: 10px;
      li {
        &:first-child {
          a {
            padding-left: 0 !important;
          }
        }
      }
    }
  }
}

